--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,545 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Working</title>
-</head>
-<body>
-    <h2>hello working</h2>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Responsive NavBar</title>
+
+    <!------------ GOOGLE FONTS ------------>
+    <link
+      href="https://fonts.googleapis.com/css?family=Anton|Cabin|Lato|Fjalla+One|Montserrat|Roboto&display=swap"
+      rel="stylesheet"
+    />
+
+    <!------------ FONT AWESOME ------------>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      rel="stylesheet"
+    />
+
+    <!------------ CUSTOM STYLE SHEET ------------>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      
+      body {
+        width: 100%;
+        height: 100vh;
+        background-color: #e6e3e4;
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+      }
+
+      nav {
+        width: 100%;
+        height: 70px;
+        background-color: #1C82AD;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .logo {
+        font-family: "Poppins", sans-serif;
+        font-weight: bolder;
+        text-transform: uppercase;
+        text-decoration: none;
+        margin-left: 20px;
+        font-size: 35px;
+        color: #fff;
+      }
+
+      nav ul {
+        background-color: #1C82AD;
+      }
+
+      nav ul li {
+        font-family: "Poppins", sans-serif;
+        display: inline-block;
+        text-transform: uppercase;
+        font-weight: bolder;
+        position: relative;
+        font-size: 16px;
+        padding: 20px;
+      }
+
+      nav ul li a {
+        text-decoration: none;
+        color: #fff;
+      }
+
+      nav ul li ul {
+        position: absolute;
+        visibility: hidden;
+        opacity: 0;
+        text-align: center;
+        width: 100%;
+        z-index: 1;
+        transition: 0.4s linear;
+        border-top: 3px solid #fff;
+      }
+
+      nav > ul > li > ul {
+        top: 100%;
+        left: 0;
+      }
+
+      nav > ul > li > ul > li ul {
+        top: 30%;
+        left: 100%;
+        border-left: 3px solid #fff;
+      }
+
+      .drop-icon {
+        transform: rotate(-90deg);
+      }
+
+      nav ul li:hover > ul {
+        visibility: visible;
+        opacity: 1;
+      }
+
+      input {
+        display: none;
+      }
+
+      label {
+        width: 130px;
+        height: 40px;
+        color: #fff;
+        font-size: 25px;
+        line-height: 38px;
+        text-align: center;
+        font-weight: bolder;
+        margin-right: 20px;
+        border: 1px solid #fff;
+        text-transform: uppercase;
+        display: none;
+      }
+
+      label span {
+        font-family: "Poppins", sans-serif;
+      }
+
+      @media (max-width: 900px) {
+        label {
+          display: block;
+        }
+
+        nav ul {
+          position: absolute;
+          top: 55px;
+          left: -110%;
+          width: 100%;
+          transition: 0.8s ease-in-out;
+        }
+
+        nav ul li {
+          display: block;
+        }
+
+        input:checked ~ #menu {
+          left: 0;
+        }
+
+        .drop-icon {
+          transform: rotate(0deg);
+        }
+
+        nav ul li ul {
+          position: relative;
+          left: 0 !important;
+          visibility: visible;
+          opacity: 1;
+          border-top: none;
+          text-align-last: left;
+          border-left: 5px solid #f12020 !important;
+          display: none;
+        }
+
+        .show {
+          display: block;
+        }
+      }
+      /*footer css start*/
+      footer {
+        margin-top: 20px;
+        font-family: "Poppins", sans-serif;
+        position: fixed;
+        bottom: 0px;
+        width: 100%;
+        background: #1C82AD;
+      }
+      .main-content {
+        display: flex;
+      }
+      .main-content .box {
+        flex-basis: 50%;
+        padding: 10px 20px;
+      }
+      .box h2 {
+        font-size: 1.125rem;
+        font-weight: 600;
+        text-transform: uppercase;
+      }
+      .box .content {
+        margin: 20px 0 0 0;
+        position: relative;
+      }
+      .box .content:before {
+        position: absolute;
+        content: "";
+        top: -10px;
+        height: 2px;
+        width: 100%;
+        background: #1a1a1a;
+      }
+      .box .content:after {
+        position: absolute;
+        content: "";
+        height: 2px;
+        width: 15%;
+        background: #f12020;
+        top: -10px;
+      }
+      .left .content p {
+        text-align: justify;
+      }
+      .left .content .social {
+        margin: 20px 0 0 0;
+      }
+      .left .content .social a {
+        padding: 0 2px;
+      }
+      .left .content .social a span {
+        height: 40px;
+        width: 40px;
+        background: #1a1a1a;
+        line-height: 40px;
+        text-align: center;
+        font-size: 18px;
+        border-radius: 5px;
+        transition: 0.3s;
+      }
+      .left .content .social a span:hover {
+        background: #f12020;
+      }
+      .center .content .fas {
+        font-size: 1.4375rem;
+        background: #1a1a1a;
+        height: 45px;
+        width: 45px;
+        line-height: 45px;
+        text-align: center;
+        border-radius: 50%;
+        transition: 0.3s;
+        cursor: pointer;
+      }
+      .center .content .fas:hover {
+        background: #f12020;
+      }
+      .text,
+      .fas {
+        color: white;
+      }
+      .center .content .text {
+        font-size: 1.0625rem;
+        font-weight: 500;
+        padding-left: 10px;
+      }
+      .center .content .phone {
+        margin: 15px 0;
+      }
+      .right form .text {
+        font-size: 1.0625rem;
+        margin-bottom: 2px;
+        color: #fff;
+      }
+      .right form .msg {
+        margin-top: 10px;
+      }
+      .right form input,
+      .right form textarea {
+        width: 100%;
+        font-size: 1.0625rem;
+        background: #fff;
+        padding-left: 10px;
+        border: 1px solid #222222;
+      }
+      .right form input:focus,
+      .right form textarea:focus {
+        outline-color: #3498db;
+      }
+      .right form input {
+        height: 35px;
+      }
+      .right form .btn {
+        margin-top: 10px;
+      }
+      .right form .btn button {
+        height: 40px;
+        width: 100%;
+        border: none;
+        outline: none;
+        background: #f12020;
+        font-size: 1.0625rem;
+        font-weight: 500;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+      .right form .btn button:hover {
+        background: #000;
+      }
+      .bottom center {
+        padding: 5px;
+        font-size: 0.9375rem;
+        background: #151515;
+      }
+      .bottom center span {
+        color: #656565;
+      }
+      .bottom center a {
+        color: #ed7a3c;
+        text-decoration: none;
+      }
+      .bottom center a:hover {
+        text-decoration: underline;
+      }
+      @media screen and (max-width: 900px) {
+        footer {
+          position: relative;
+          bottom: 0px;
+        }
+        .main-content {
+          flex-wrap: wrap;
+          flex-direction: column;
+        }
+        .main-content .box {
+          margin: 5px 0;
+        }
+        .footer_para,
+        .footer_h2 {
+          color: #e4e4e4;
+        }
+        .logo{
+          padding: 10px;
+          font-size: 15px;
+          border: 2px solid #fff;
+        }
+      }
+      footer p,
+      h2,.text {
+        color: #fff;
+      }
+      .fa-twitter,
+      .fa-facebook-f,
+      .fa-youtube,
+      .fa-instagram {
+        color: #e4e4e4;
+      }
+      .text{
+        font-weight: bold;
+      }
+      /*footer css end*/
+    </style>
+    <nav>
+      <a href="#" class="logo">Hetauda City College</a>
+
+      <input type="checkbox" id="box" />
+      <label for="box">
+        <span>MENU <i class="fas fa-bars"></i></span>
+      </label>
+
+      <ul id="menu">
+        <li><a href="#">Home</a></li>
+        <li>
+          <a href="#"
+            >About US &nbsp;&nbsp;<span><i class="fa fa-angle-down"></i></span>
+          </a>
+          <ul>
+            <li><a href="#">About HCC</a></li>
+            <li><a href="#">Why HCC</a></li>
+            <li><a href="#">Location</a></li>
+            <li><a href="#">Facilities & Staff</a></li>
+          </ul>
+        </li>
+
+        <li>
+          <a href="#"
+            >Programs &nbsp;&nbsp;<span><i class="fa fa-angle-down"></i></span>
+          </a>
+          <ul>
+            <li><a href="#">BCA</a></li>
+            <li><a href="#">+ 2</a></li>
+            <li><a href="#">School</a></li>
+            <li><a href="#">Bsc.CSIT</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Extra Servives</a></li>
+        <li><a href="#">Contact us</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#">Facilities</a></li>
+      </ul>
+    </nav>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Est illo a
+      eveniet consequatur minima quam modi repellendus nesciunt nemo
+      exercitationem harum impedit, voluptate explicabo nulla saepe, dolorem nam
+      aperiam fugit inventore iusto adipisci sed animi ratione ex. Molestias
+      soluta minima, magni dolore veritatis quas magnam harum, impedit ab nisi,
+      eveniet dolorum dicta enim. Deleniti sunt tempora sed cupiditate, suscipit
+      nobis earum impedit veniam culpa cum vel incidunt provident nesciunt
+      doloribus amet maiores voluptatum. Rem vel odio provident odit. Autem
+      omnis rerum eaque quod nobis corrupti iusto fugiat quaerat, debitis
+      deserunt cumque perspiciatis eos beatae enim in facilis laboriosam culpa
+      ab ipsum excepturi laborum quidem dolorum vel error? Excepturi voluptatem
+      mollitia consequatur praesentium, recusandae quia possimus omnis dolor
+      facere tenetur veniam inventore quos autem nulla, ab ut dolorum nostrum ea
+      animi libero aspernatur in alias dignissimos. Vel quisquam similique
+      delectus asperiores, corporis deleniti et sapiente, veniam repellat
+      necessitatibus reprehenderit sed tempore nihil sint ipsam omnis facilis
+      aut molestias porro totam explicabo dolorum. Temporibus facere, iure illo
+      nobis ipsa reiciendis amet et, corrupti voluptatibus facilis sunt sed
+      provident numquam asperiores aut laudantium magni dolores, eveniet
+      deserunt exercitationem mollitia nisi consequatur sit. Facere numquam
+      consectetur natus explicabo, cumque sequi delectus quis tempore quae
+      nesciunt ut! Commodi debitis iste adipisci dolor eaque temporibus magni
+      iure praesentium, ex sapiente itaque ipsa, harum libero. Natus quidem sed
+      nisi numquam ut id architecto repellat aperiam tempora, aliquid et! Cumque
+      hic eaque illum maxime nobis laudantium eum facilis voluptate dicta illo
+      veniam, suscipit voluptas iusto minus? Veniam quam, placeat perspiciatis
+      voluptate, deserunt ipsa dolore distinctio nesciunt delectus sint minima?
+      Quae doloribus totam pariatur deserunt debitis labore sunt deleniti, ullam
+      ex voluptatum sit harum, magnam dolor voluptatibus beatae. Ab sunt porro
+      suscipit nihil impedit sapiente tempore, tenetur commodi architecto
+      dignissimos animi harum possimus unde in aperiam mollitia? Quis,
+      eveniet?Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+      perspiciatis cupiditate consequuntur praesentium voluptatem quae,
+      necessitatibus est. Explicabo, saepe autem modi officia expedita libero
+      fugiat veniam, voluptates ea inventore accusamus necessitatibus iste
+      dolorem reprehenderit eligendi quia consequuntur rerum optio ipsum?
+      Nesciunt velit non ipsa culpa voluptates consectetur deleniti? Dolores
+      possimus minus odit. Excepturi aliquam similique minima iste fugiat quo,
+      expedita sequi quae omnis. Debitis molestiae ipsa nostrum tempora animi
+      repellat, deleniti quibusdam assumenda dolor quisquam ut voluptatem
+      recusandae illo odio culpa exercitationem aperiam tempore quis sequi
+      voluptate sunt ipsum. Adipisci ipsam dignissimos vel cumque vitae
+      consequatur itaque pariatur suscipit amet rerum totam dolor, maxime
+      debitis labore voluptate, accusantium, quaerat assumenda ad error
+      reprehenderit veritatis veniam. Nisi distinctio voluptates provident iste
+      atque, eos praesentium veniam molestiae, dicta est unde aperiam facilis,
+      incidunt doloremque saepe delectus? Aperiam praesentium, dolorem ut minus
+      vitae temporibus fugit ratione quisquam dolores atque, corrupti, cum
+      inventore suscipit eius possimus nostrum cupiditate soluta! Aliquid
+      excepturi illo suscipit maxime rerum magnam sunt aliquam. Necessitatibus
+      nulla aspernatur aliquid odit beatae atque, modi facilis assumenda
+      repudiandae nostrum nobis ullam consequatur et ducimus obcaecati neque
+      quos maiores itaque distinctio amet enim rem. Quis nobis consequatur
+      accusantium ea labore vero quaerat molestias minus laboriosam dignissimos
+      eos deleniti quam sequi ex porro animi, eaque mollitia, odit rerum sunt?
+      Quis corrupti non tenetur, hic reprehenderit inventore enim ab autem illum
+      earum officia nam sunt alias. Commodi quisquam recusandae nostrum cum amet
+      quidem voluptatum alias in laborum rem quam iure aut non sed excepturi
+      cupiditate deleniti, quibusdam similique iste. Quae voluptatibus, rem non
+      ut porro tempore omnis eveniet modi provident officiis illo veniam
+      reprehenderit quaerat distinctio. Voluptates, reiciendis? Harum magni
+      nemo, recusandae non consequatur repellendus vitae magnam debitis, numquam
+      vero repellat ducimus cumque velit, cum iusto similique. Minima aspernatur
+      incidunt maxime, minus fugit praesentium voluptates eius.
+    </p>
+
+    <!-- FOOTER STARTS -->
+    <footer>
+      <div class="main-content">
+        <div class="left box">
+          <h2 class="footer_h2">About us</h2>
+          <div class="content">
+            <p class="footer_para">
+              Hetauda City College is first IT college of Makawanpur. Our main will is to provide better education for all our students with both academic knowledge as well as practical with many extra technologies.
+            </p>
+            <div class="social">
+              <a href="https://facebook.com/coding.np"
+                ><span class="fab fa-facebook-f"></span
+              ></a>
+              <a style href="#"><span class="fab fa-twitter"></span></a>
+              <a href="https://instagram.com/coding.np"
+                ><span class="fab fa-instagram"></span
+              ></a>
+              <a href="https://youtube.com/c/codingnepal"
+                ><span class="fab fa-youtube"></span
+              ></a>
+            </div>
+          </div>
+        </div>
+
+        <div class="center box">
+          <h2>Address</h2>
+          <div class="content">
+            <div class="place">
+              <span class="fas fa-map-marker-alt"></span>
+              <span class="text">Hetauda, Makawanpur</span>
+            </div>
+            <div class="phone">
+              <span class="fas fa-phone-alt"></span>
+              <span class="text">+977-0123456789</span>
+            </div>
+            <div class="email">
+              <span class="fas fa-envelope"></span>
+              <span class="text">khatradeveloper@example.com</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="right box">
+          <h2>Contact us</h2>
+          <div class="content">
+            <form action="#">
+              <!-- <div class="email">
+                <div class="text">Email *</div>
+                <input type="email" required />
+              </div> -->
+              <div class="msg">
+                <div class="text">Message *</div>
+                <textarea rows="2" cols="25" required></textarea>
+              </div>
+              <div class="btn">
+                <button type="submit">Send</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="bottom">
+        <center>
+          <span class="credit"
+            >Created By
+            <a href="https://www.codingnepalweb.com">Hetauda city college</a> |
+          </span>
+          <span class="far fa-copyright"></span
+          ><span> 2023 All rights reserved.</span>
+        </center>
+      </div>
+    </footer>
+    <!-- FOOTER ENDS -->
+
+    <script>
+      let dropdown = document.querySelectorAll("nav ul li a");
+
+      dropdown.forEach((element) => {
+        element.addEventListener("click", (event) => {
+          event.stopPropagation();
+          element.nextElementSibling.classList.toggle("show");
+        });
+      });
+    </script>
+  </body>
 </html>
