--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive NavBar</title>
+    <title>HCC</title>
 
     <!------------ GOOGLE FONTS ------------>
     <link
@@ -467,14 +467,14 @@
               Hetauda City College is first IT college of Makawanpur. Our main will is to provide better education for all our students with both academic knowledge as well as practical with many extra technologies.
             </p>
             <div class="social">
-              <a href="https://facebook.com/coding.np"
+              <a href="https://facebook.com/aayushtcp" target="_blank"
                 ><span class="fab fa-facebook-f"></span
               ></a>
-              <a style href="#"><span class="fab fa-twitter"></span></a>
-              <a href="https://instagram.com/coding.np"
+              <a target="_blank" href="https://twitter.com/aayushTC"><span class="fab fa-twitter"></span></a>
+              <a href="#" target="_blank"
                 ><span class="fab fa-instagram"></span
               ></a>
-              <a href="https://youtube.com/c/codingnepal"
+              <a href="#" target="_blank"
                 ><span class="fab fa-youtube"></span
               ></a>
             </div>
