--- a/templates/gallary.html
+++ b/templates/gallary.html
@@ -1,12 +1,186 @@
+{% extends 'base.html' %} {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HCC</title>
+    <title>INDEX N</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <!-- <link rel="stylesheet" href="C:\Users\DELL\Desktop\m0\siteone\templates"> -->
+    <script src="https://kit.fontawesome.com/f2859febcb.js" crossorigin="anonymous"></script>
 </head>
+
+
 <body>
-    <h2>Gallary page working</h2>
+    {% block content %}
+    <style>
+        h5 {
+            color: #fff;
+        }
+        
+        h2 {
+            font-family: sans-serif;
+            font-weight: bold;
+            color: #18f98f;
+        }
+        
+        .img-gallery {
+            column-count: 3;
+            max-width: 1000px;
+            margin: 0 auto;
+            /* padding: 20px; */
+        }
+        
+        .img-gallery img {
+            border-radius: 30px;
+            margin-bottom: 10px;
+            padding: 20px;
+            width: 100%;
+            cursor: pointer;
+        }
+        
+        .img-gallery img:hover {
+            border-radius: 30px;
+            transition-duration: .5s;
+            transform: scale(1.1) rotate(0deg);
+            box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
+        }
+        
+        .full-img {
+            z-index: 10;
+            width: 100%;
+            height: 100vh;
+            background: rgba(0, 0, 0, 0.9);
+            position: fixed;
+            top: 0;
+            left: 0;
+            display: none;
+            align-items: center;
+            justify-content: center;
+        }
+        
+        .full-img img {
+            width: 90%;
+            max-width: 500px;
+        }
+        
+        .full-img span {
+            padding: 10px;
+            position: absolute;
+            top: 5%;
+            right: 5%;
+            font-size: 20px;
+            color: #fff;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        
+        .full-img span:hover {
+            box-shadow: 0 0 8px #f44206, 0 0 8px #ef0dc5;
+        }
+        
+        .progress {
+            margin-bottom: 1rem;
+        }
+        
+        .contain {
+            padding: 3rem 5rem 3rem 5rem;
+        }
+        
+        body {
+            overflow-x: hidden;
+        }
+        @media all and (max-width: 968px) {
+        .img-gallery{
+            width: 80%;
+            margin: 20px auto 20px;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            grid-gap: 30px;
+            }
+        .img-gallery img {
+            border-radius: 30px;
+            width: 100%;
+            cursor: pointer;
+        }
+        .img-gallery img:hover {
+            transition-duration: .5s;
+            transform: scale(1.1) rotate(deg);
+            border-radius: 20px;
+            box-shadow: 0 32px 75px rgba(68, 77, 136, 0.2);
+        }
+        }
+        .barline{
+            color: black;
+        }
+    </style>
+    <center>
+        <h2>Our Images</h2>
+    </center>
+
+    <div class="full-img" id="fullImgBox">
+        <img src="{% static 'college1.jpg' %}" id="fullImg">
+        <span onclick="closefullImg()">Close</span>
+    </div>
+
+    <div class="img-gallery">
+        <img src="{% static 'college1.jpg' %}" onclick="openfullImg(this.src)">
+        <img src="{% static 'college2.jpg' %}" onclick="openfullImg(this.src)">
+        <img src="{% static 'college3.jpg' %}" onclick="openfullImg(this.src)">
+        <img src="{% static 'lorem_co-ordinator.jpg' %}" onclick="openfullImg(this.src)">
+        <img src="{% static '+2_co-ordinator.jpg' %}" onclick="openfullImg(this.src)">
+        <img src="{% static 'plus2_hm_cook1.jpg' %}" onclick="openfullImg(this.src)">
+        <img src="{% static 'csit_football.jpg' %}" onclick="openfullImg(this.src)">
+        <img src="{% static 'bcapic1.jpg' %}" onclick="openfullImg(this.src)">
+        <img src="{% static 'school_students.jpg' %}" onclick="openfullImg(this.src)">
+
+    </div>
+
+
+
+    <div class="contain">
+        <h5 class="barline">Alumni</h5>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 10%"></div>
+        </div>
+        <h5 class="barline">Ratings</h5>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
+        </div>
+        <h5 class="barline">Services</h5>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-danger progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+        </div>
+        <h5 class="barline">Work</h5>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped bg-success progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+        </div>
+    </div>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script>
+        var fullImgBox = document.getElementById("fullImgBox");
+        var fullImg = document.getElementById("fullImg");
+
+        function openfullImg(pic) {
+            fullImgBox.style.display = "flex";
+            fullImg.src = pic;
+        }
+
+        function closefullImg() {
+            fullImgBox.style.display = "none";
+        }
+    </script>
+    {% endblock %}
+
 </body>
+
 </html>
