backend updated/content baki

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,12 +1,238 @@
-<!DOCTYPE html>
+{% extends 'base.html' %} {% load static %}
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hetauda City College</title>
-</head>
-<body>
-  <h1>Contact page</h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hetauda City College</title>
+    <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
+    rel="stylesheet"
+  />
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
+  </head>
+  <body>
+    {% block content %}
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+      .main_contactus{
+        /*min-height: 100vh;*/  
+        width: 100%;
+        background: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .contact_container{
+        width: 85%;
+        background: #fff;
+        border-radius: 6px;
+        padding: 20px 60px 30px 40px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+      }
+      .contact_container .content{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      .contact_container .content .left-side{
+        width: 25%;
+        height: 100%;
+        display: flex;  
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-top: 15px;
+        position: relative;
+      }
+      .content .left-side::before{
+        content: '';
+        position: absolute;
+        height: 70%;
+        width: 2px;
+        right: -15px;
+        top: 50%;
+        transform: translateY(-50%);
+        background: #afafb6;
+      }
+      .content .left-side .details{
+        margin: 14px;
+        text-align: center;
+      }
+      .content .left-side .details i{
+        font-size: 30px;
+        color: #00f884;
+        margin-bottom: 10px;
+      }
+      .content .left-side .details .topic{
+        font-size: 18px;
+        font-weight: 500;
+      }
+      .content .left-side .details .text-one,
+      .content .left-side .details .text-two{
+        font-size: 14px;
+        color: #afafb6;
+      }
+      .contact_container .content .right-side{
+        width: 75%;
+        margin-left: 75px;
+      }
+      .content .right-side .topic-text{
+        font-size: 23px;
+        font-weight: 600;
+        color: #2f358f;
+      }
+      .right-side .input-box{
+        height: 50px;
+        width: 100%;
+        margin: 12px 0;
+      }
+      .right-side .input-box input,
+      .right-side .input-box textarea{
+        height: 100%;
+        width: 100%;
+        border: none;
+        outline: none;
+        font-size: 16px;
+        background: #F0F1F8;
+        border-radius: 6px;
+        padding: 0 15px;
+        resize: none;
+      }
+      .right-side .message-box{
+        min-height: 110px;
+      }
+      .right-side .input-box textarea{
+        padding-top: 6px;
+      }
+      .right-side .button{
+        display: inline-block;
+        margin-top: 12px;
+      }
+      .right-side .button input[type="submit"]{
+        color: #fff;
+        font-size: 18px;
+        outline: none;
+        border: none;
+        padding: 8px 16px;
+        border-radius: 6px;
+        color: black;
+        background: red;
+        cursor: pointer;
+        transition: all 0.3s ease;
+      }
+      .button input[type="button"]:hover{
+        background: #2f358f;
+      }
+      
+      @media (max-width: 950px) {
+        .contact_container{
+          width: 90%;
+          padding: 30px 40px 40px 35px ;
+        }
+        .contact_container .content .right-side{
+         width: 75%;
+         margin-left: 55px;
+      }
+      }
+      @media (max-width: 820px) {
+        .contact_container{
+          margin: 40px 0;
+          height: 100%;
+        }
+        .contact_container .content{
+          flex-direction: column-reverse;
+        }
+       .contact_container .content .left-side{
+         width: 100%;
+         flex-direction: row;
+         margin-top: 40px;
+         justify-content: center;
+         flex-wrap: wrap;
+       }
+       .contact_container .content .left-side::before{
+         display: none;
+       }
+       .contact_container .content .right-side{
+         width: 100%;
+         margin-left: 0;
+       }
+      }
+      @media all and (min-width: 800px) {
+        .contact_container{
+          margin: 5rem 0rem;
+        }
+      }
+      .design{
+        border-bottom: 4px solid #18f98f;
+        border-radius: 5px;
+      }
+      i{
+        color: #18f98f;
+      }
+
+    </style>
+    <div class="container">
+      {% for message in messages %}
+      <p class="text-danger" style="font-weight:bold; font-size: 30px;">{{message}}</p>
+      {% endfor %}
+      <div style="overflow:hidden;resize:none;max-width:100%;width:100%;height:450px;"><div id="g-mapdisplay" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Hetauda+City+College,+Hetauda,+Nepal&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="googlemaps-made" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="get-map-data">premium bootstrap themes</a><style>#g-mapdisplay img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div>
+    </div>
+    <div class="main_contactus">
+    <div class="contact_container">
+      <div class="content">
+        <div class="left-side">
+          <div class="address details">
+            <i class="fa-solid fa-location-dot"></i>
+            <div class="topic">Address</div>
+            <div class="text-one">Hetauda, Makawanpur</div>
+            <div class="text-two">Hetauda 05</div>
+          </div>
+          <div class="phone details">
+            <i class="fas fa-phone"></i>
+            <div class="topic">Phone</div>
+            <div class="text-one">+977 1234567890</div>
+            <div class="text-two">+0096 0123456789</div>
+          </div>
+          <div class="email details">
+            <i class="fas fa-envelope"></i>
+            <div class="topic">Email</div>
+            <div class="text-one">test@gmail.com</div>
+            <div class="text-two">khatra@gmail.com</div>
+          </div>
+        </div>
+        <div class="right-side">
+          <div class="topic-text">Send Us a <span class="design">Message</span></div>
+          <p>If you want to ask a questions or if you need general enquiry from us then you can get in touch with us.</p>
+        <form action="/contact/" method="post">
+          {% csrf_token %}
+          <div class="input-box">
+            <input type="text" name="name" placeholder="Enter your name">
+          </div>
+          <div class="input-box">
+            <input type="email" name="email" placeholder="Enter your email">
+          </div>
+          <div class="input-box">
+            <input type="phone" name="phone" placeholder="Enter your phone number">
+          </div>
+          <div class="input-box message-box">
+            <textarea name="content" placeholder="Please enter your message or Enquiry"></textarea>
+          </div>
+          <div class="button">
+            <input type="submit" value="Submit" >
+          </div>
+        </form>
+      </div>
+      </div>
+    </div>
+  </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/6846ee7114.js" crossorigin="anonymous"></script>
+{% endblock %}
+  </body>
 </html>
