--- a/templates/base.html
+++ b/templates/base.html
@@ -350,6 +350,9 @@
       color: red;
       padding-top: 8px;
     }
+    .logo_img{
+      height: 35px;
+    }
   </style>
   <body>
     <!-- header start -->
@@ -357,7 +360,10 @@
       <div class="container_nav">
         <div class="header-main">
           <div class="logo">
-            <a href="#">Hetauda City College</a>
+            <a href="/">
+              <img class="logo_img" src="{% static 'hcc.png' %}" alt="">
+              <span class="img_side_text">HCC</span>
+            </a>
           </div>
           <div class="open-nav-menu">
             <span></span>
@@ -448,10 +454,19 @@
               </div> -->
 			  <h2>Follow us on</h2>
               <p class="socials">
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-dribbble"></i>
-                <i class="fa fa-pinterest"></i>
-                <i class="fa fa-twitter"></i>
+                <a target="_blank" href="https://www.facebook.com/hetaudacitycollege.edu.np">
+                  <i class="fa fa-facebook"></i>
+                </a>
+      
+                <a href="/" target="_blank" >
+                  <i class="fa fa-instagram"></i>
+                </a>
+                <a href="/" target="_blank" >
+                  <i class="fa fa-twitter"></i>
+                </a>
+                <a href="/" target="_blank" >
+                  <i class="fa fa-envelope"></i>
+                </a>
               </p>
             </div>
           </div>
@@ -483,12 +498,11 @@
           </div>
           <div class="col-lg-3 col-sm-6">
             <div class="single-box">
-              <h2>Newsletter</h2>
+              <h2>Hetauda City College</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Consequuntur doloremque earum similique fugiat nobis. Facere?
+                We will try our best to deliver better education for our lovely students and make them a better professional in every related field.
               </p>
-              <div class="input-group mb-3">
+              <!-- <div class="input-group mb-3">
                 <input
                   type="text"
                   class="form-control"
@@ -499,13 +513,22 @@
                 <span class="input-group-text" id="basic-addon2"
                   ><i class="fa fa-long-arrow-right"></i
                 ></span>
-              </div>
+              </div> -->
               <h2>Follow us on</h2>
               <p class="socials">
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-dribbble"></i>
-                <i class="fa fa-pinterest"></i>
-                <i class="fa fa-twitter"></i>
+                <a target="_blank" href="https://www.facebook.com/hetaudacitycollege.edu.np">
+                  <i class="fa fa-facebook"></i>
+                </a>
+      
+                <a href="/" target="_blank" >
+                  <i class="fa fa-instagram"></i>
+                </a>
+                <a href="/" target="_blank" >
+                  <i class="fa fa-twitter"></i>
+                </a>
+                <a href="/" target="_blank" >
+                  <i class="fa fa-envelope"></i>
+                </a>
               </p>
             </div>
           </div>
