--- a/templates/school.html
+++ b/templates/school.html
@@ -288,6 +288,9 @@
         >
       </div>
       <main class="mainn">
+        {% for message in messages %}
+        <p class="text-danger">{{message}}</p>
+        {% endfor %}
         <h1>School</h1>
         <div class="main_img_div">
           <img
@@ -328,7 +331,8 @@
             <div class="form_container">
                 <header>Admission Form</header>
         
-                <form action="#">
+                <form action="/school/" method="post">
+                  {% csrf_token %}
                     <div class="form first">
                         <div class="details personal">
                             <span class="title">Personal Details</span>
@@ -336,27 +340,27 @@
                             <div class="fields">
                                 <div class="input-field">
                                     <label>Full Name</label>
-                                    <input type="text" placeholder="Enter your name" required>
+                                    <input type="text" name="name" placeholder="Enter your name" required>
                                 </div>
         
                                 <div class="input-field">
                                     <label>Date of Birth</label>
-                                    <input type="date" placeholder="Enter birth date" required>
+                                    <input type="date" name="dob" placeholder="Enter birth date" required>
                                 </div>
         
                                 <div class="input-field">
                                     <label>Email</label>
-                                    <input type="text" placeholder="Enter your email" required>
+                                    <input type="text" name="email" placeholder="Enter your email" required>
                                 </div>
         
                                 <div class="input-field">
                                     <label>Mobile Number</label>
-                                    <input type="number" placeholder="Enter mobile number" required>
+                                    <input type="number" name="phone" placeholder="Enter mobile number" required>
                                 </div>
         
                                 <div class="input-field">
-                                    <label>Class</label>
-                                    <select required>
+                                    <label>Grade</label>
+                                    <select required name="grade">
                                         <option disabled selected>Select Addmission Grade</option>
                                         <option>+2</option>
                                         <option>School</option>
@@ -367,7 +371,7 @@
         
                                 <div class="input-field">
                                     <label>Address</label>
-                                    <input type="text" placeholder="Hetauda - 5, Piple" required>
+                                    <input type="text" name="address" placeholder="Hetauda - 5, Piple" required>
                                 </div>
                             </div>
                         </div>
@@ -402,6 +406,6 @@
 
       backBtn.addEventListener("click", () => form.classList.remove('secActive'));
     </script>
-    {% endblock %}
+ {% endblock %}
   </body>
 </html>
